<resources>
    <string name="app_name">Didaktikapp</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_position">Map</string>

    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
        <item name="android:windowBackground">@drawable/splash_background</item>
    </style>

    <string name="comenzar">Comenzar</string>
    <string name="idioma">Idioma</string>
    <string name="continuar">Continuar</string>
    <string name="ayuda">Ayuda</string>
    <string name="salir">Salir</string>
    <string name="comprobar">Comprobar</string>
    <string name="siguiente">Siguiente</string>
    <string name="atras">Anterior</string>
    <string name="pausa">Pausa</string>
    <string name="playVideo">Play</string>
    <string name="stopVideo">Stop</string>
    <string name="pasarActividad">Pasar a la actividad</string>
    <string name="cambiarIdioma">Cambiar idioma</string>
    <string name="castellano">Castellano</string>
    <string name="euskera">Euskera</string>
    <string name="seleccionaIdioma">Selecciona el idioma</string>
    <string name="success">Bien</string>
    <string name="next">Siguiente</string>
    <string name="restart">Reiniciar</string>
    <string name="ok">ok</string>
    <string name="exit">salir</string>
    <string name="complete">Completado</string>
    <string name="tips">Pista</string>
    <string name="felicidades">Felicidades</string>
    <string name="mensaje">Descifra el mensaje misterioso que se esconde aqui abajo</string>
    <string name="rellenar">Rellena los huecos que hay para completar las frases</string>
    <string name="rellenar1">Para enviar mineral al &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; y ​​otras ferreterías en otras regiones, había que llevarlo de las montañas a los muelles.</string>
    <string name="rellenar2">Inicialmente, el mineral se bajaba con &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; y carros de mulas.</string>
    <string name="rellenar3">A lo largo de los años, la demanda externa llevó a un tremendo aumento en la producción de &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;.</string>
    <string name="rellenar4">Inicialmente utilizaban animales, pero gradualmente comenzaron a ser reemplazados por &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; , entre otros, por teleféricos y ferrocarriles.</string>
    <string name="rellenar5">El &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;, un sistema de transporte donde los &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; son transportados por un cable.</string>
    <string name="respuesta1">Pais Vasco</string>
    <string name="respuesta2">bueyes</string>
    <string name="respuesta3">minerales</string>
    <string name="respuesta4">maquinas</string>
    <string name="respuesta5">Funicular</string>
    <string name="respuesta6">bagones</string>
</resources>
